--- a/src/main/resources/db_config.json
+++ b/src/main/resources/db_config.json
@@ -2,8 +2,8 @@
   "DataProviders": {
     "PlanetScale": {
       "url": "jdbc:mysql://aws.connect.psdb.cloud/java?sslMode=VERIFY_IDENTITY",
-      "user": "dkaujy7rftejtf4hdub3",
-      "password": "pscale_pw_IYJWCVBGNu6kZQPRm0sudGn0016Md7aN8dgjB9vH6xV"
+      "user": "uh74c62bmcublzp7p6a8",
+      "password": "pscale_pw_ByK79wujSzozXb92AOgkoIXJCVllkjzwArTJFYOx2Rp"
     }
   }
 }
